# opensomeip-python

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml  wheels.yml
.hypothesis/constants/: 031fe350771aff11  1401f19b695d8e51  1e765c65e6e189d4  26ebe4a877187020  3478f51d58b33899  38386e77c1fb9b18  3f43ee8457906232  4500bac9a16c71d0  6e3fcfc104869461  78d4b90469de1a86  8e03036ff5dbc851  9f94786e8e8a037b  a14ca946aa0eb5ac  bde41655777ebf54  c08f56da5418cbb7  cdd45569d2cbf91c
changes/feature/: cpp-bindings.md  e2e-protection.md  high-level-api.md  logging-bridge.md  native-wiring.md  serialization.md  tcp-support.md  transport-protocol.md
docs/: compatibility.rst  conf.py  getting_started.rst  index.rst  threading_model.rst
docs/api/: client.rst  e2e.rst  events.rst  exceptions.rst  index.rst  logging.rst  message.rst  receiver.rst  rpc.rst  sd.rst  serialization.rst  server.rst  tp.rst  transport.rst  types.rst
docs/guides/: events.rst  index.rst  rpc.rst  serialization.rst  service_discovery.rst  tp_e2e.rst  transport.rst
examples/: README.md
examples/advanced/complex_types/: client.py  server.py
examples/advanced/large_messages/: client.py  server.py
examples/basic/events/: publisher.py  subscriber.py
examples/basic/hello_world/: client.py  server.py
examples/basic/method_calls/: client.py  server.py
examples/basic/sd_demo/: server.py
examples/e2e_protection/: basic_e2e.py
src/_opensomeip/: CMakeLists.txt  e2e_bind.cpp  events_bind.cpp  exceptions.cpp  message_bind.cpp  module.cpp  rpc_bind.cpp  sd_bind.cpp  serialization_bind.cpp  tp_bind.cpp  transport_bind.cpp  types_bind.cpp
src/opensomeip/: __init__.py  _bridge.py  _logging.py  client.py  e2e.py  events.py  exceptions.py  message.py  receiver.py  rpc.py  sd.py  serialization.py  server.py  tp.py  transport.py  types.py
tests/: conftest.py
tests/integration/: test_event_flow.py  test_rpc_roundtrip.py  test_sd_discovery.py  test_tp_large_msg.py
tests/property/: test_serialization_props.py
tests/unit/: conftest.py  test_client.py  test_coverage_gaps.py  test_e2e.py  test_events.py  test_exceptions.py  test_logging_bridge.py  test_message.py  test_receiver.py  test_rpc.py  test_sd.py  test_serialization.py  test_server.py  test_tp.py  test_transport.py  test_types.py
