[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "opensomeip"
version = "0.1.0"
description = "Python bindings for the opensomeip C++ SOME/IP stack"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "opensomeip-python contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["someip", "automotive", "networking", "protocol", "bindings"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "typing_extensions>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://github.com/vtz/opensomeip-python"
Repository = "https://github.com/vtz/opensomeip-python"
Issues = "https://github.com/vtz/opensomeip-python/issues"
Documentation = "https://opensomeip-python.readthedocs.io"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/opensomeip"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
OPENSOMEIP_PYTHON_VERSION = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "multicast: tests requiring multicast support (may be skipped in CI)",
    "integration: integration tests requiring network access",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
]
ignore = [
    "RUF022",    # __all__ sorting is not required
    "UP035",     # allow typing imports for compat
    "SIM105",    # contextlib.suppress less readable for C++ fallback guards
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "_opensomeip.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["opensomeip"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
    "pragma: no cover",
    "if self\\._cpp is not None",
    "if ext is not None",
    "require_native\\(",
    "def _on_response\\(",
    "def _cpp_handler\\(",
]

[tool.towncrier]
package = "opensomeip"
directory = "changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/vtz/opensomeip-python/releases/tag/v{version}) - {project_date}"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false

[tool.opensomeip]
opensomeip-version = "0.1.0"
